quick fixes to cropping

--- a/src/views/home/Home.css
+++ b/src/views/home/Home.css
@@ -94,6 +94,7 @@ h2 {
 .home_staff_portrait_picture {
     height: 200px;
     width: 200px;
+    object-fit: cover;
 }
 
 .home_staff_text {
